@@ -1,0 +1,12 @@
+subarch nslu2
+cpuinfo slug.cpuinfo
+majors 2.6
+flavour nslu2
+kernel-2.6 linux-image-2.6-nslu2
+usable \
+  linux-image-2.6-nslu2
+unusable \
+  linux-image-2.6-ixp4xx \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-rpc \
+  linux-image-2.6-s3c2410
